<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:baselineAligned="true">
   
<TextView
   android:textColor="@color/lime_green"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:text="@string/welcome"
	/>

    <Space
            android:layout_width="54dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:layout_marginBottom="29dp"/>

    <TextView
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:textColor="@color/lime_green"
   android:text="@string/light_sensor_data"
   />

<TextView
    android:textColor="@color/red"
    android:id="@+id/lightsensor"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	/>

<TextView
    android:textColor="@color/red"
    android:id="@+id/lightsensordata"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	/>

<TextView
    android:textColor="@color/lime_green"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/x_axis"
     />

<TextView
    android:id="@+id/x"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/red" />

<TextView
   android:textColor="@color/lime_green"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:text="@string/y_axis"
	/>

<TextView
	android:id="@+id/y"
	android:textColor="@color/red"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>

<TextView
   android:textColor="@color/lime_green"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:text="@string/z_axis"
	/>

<TextView
	android:id="@+id/z"
	android:textColor="@color/red"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="-27dp">

        <TextView
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="By: @MaxKulik1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>